# slack-inbox-triage

./: .gitignore  DEMO_SCRIPT.md  README.md  SUBMISSION.md  pyproject.toml  slack_app_manifest.yml
.github/workflows/: ci.yml
docs/: DEPLOY.md  architecture.py
examples/: triage_demo.py
src/slack_inbox_triage/: __init__.py  classify.py  governance.py  scheduler.py  slack_client.py  triage.py
tests/: __init__.py  _bootstrap.py  conftest.py  helpers.py  test_audit_trail.py  test_classify.py  test_egress_allowlist.py  test_scheduler.py  test_scope_allowlist.py  test_triage_agent.py
